recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:4: error: ')' expected but '}' found.
	}
        ^