recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	if (level>0) {
		sierpinski(level-1, length/3)
		avance(length/3
	}
	else {
		for (i<-0 to 2) {
			avance(length)
			droite(120)
		}
	}
}
